solution for exercise 12

--- a/templates/users/show.phtml
+++ b/templates/users/show.phtml
@@ -1,2 +1,2 @@
-<h1>id = <?= $id ?></h1>
-<h1>nickname = user-<?= $id ?></h1>
+<h1>id = <?= htmlspecialchars($id) ?></h1>
+<h1>nickname = user-<?= htmlspecialchars($id) ?></h1>
