--- a/templates/users/new.phtml
+++ b/templates/users/new.phtml
@@ -1,4 +1,4 @@
-<header><h1>New User</h1></header>
+<h1>New User</h1>
 <hr>
 <form action=<?= $router->urlFor('users.store') ?> method="post">
     <div>
